# archipelago

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  jig.config.md  job-add-review.md  project-check-2026-04-29.md  pyproject.toml
.claude/agents/: spec-collaborator.md
.claude/commands/: fix-issue.md
.claude/rules/: agent-foundry-imports.md  data-model-conventions.md  testing.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: add-to-project.yml  ci.yml
claude/: CLAUDE orig.md  CLAUDE.md
claude/agents/: feature-architect.md  feature-architect.orig.md  product-strategist-agent.md  solution-architect.md  spec-collaborator.md
docs/: agent-architect-instructions.md  agent-scout-instructions.md  archipelago_candidate_synergy_software_projects.md  architecture-wins.md  architecture.md  lessons-learned-configuration.md  reference-material.md  waste-analysis-plan.md
docs/agents/: product-compass-template.md
docs/archive/topology-basic-stage-1/: 2026-04-04-cs2-primitive-validators-plan.md  2026-04-05-cs3-primitive-compiler-plan.md  2026-04-07-cs5-data-models-plan.md  2026-04-08-cs6-agent-output-models-plan.md  2026-04-08-cs6.5-structured-output-protocol-plan.md  2026-04-17-cs7-plan4-archipelago-agents-plan.md  2026-04-17-cs7-plan4-phase1-markdown-machinery-design.md  2026-04-20-cs7-plan4-phase2-design.md  2026-04-20-cs7-plan4-phase2-slice1-implementation-plan.md  2026-04-21-cs7-plan4-phase2-slices-2-5-implementation-plan.md
docs/engineering/: design-investigation-type.md  development-workflow.md  oss-publication-checklist.md  troubleshooting-stuck-implementer-2026-05-12.md
docs/knowledge/: corrections-required.md  docker-worker-fixes.md  review-lessons-log.md
docs/plans/: 2026-04-03-cs1-primitive-models-plan.md  2026-04-03-review-feedback-loop-design.md  2026-04-03-review-feedback-loop-roadmap.md  2026-04-04-cs2-primitive-validators-plan.md  2026-04-05-cs3-primitive-compiler-plan.md  2026-04-07-cs5-data-models-plan.md  2026-04-08-cs6-agent-output-models-plan.md  2026-04-08-cs6.5-structured-output-protocol-plan.md  2026-04-13-cs7-plan1-agent-action-primitive-plan.md  2026-04-14-cs7-plan2-lifecycle-orchestration-plan.md  2026-04-17-cs7-plan3-base-image-plan.md  2026-04-17-cs7-plan4-archipelago-agents-plan.md  2026-04-17-cs7-plan4-phase1-implementation-plan.md  2026-04-17-cs7-plan4-phase1-markdown-machinery-design.md  2026-04-17-cs7-plan4-phase1-markdown-machinery-plan.md  2026-04-20-cs7-plan4-phase2-design.md  2026-04-20-cs7-plan4-phase2-slice1-implementation-plan.md  2026-04-21-cs7-plan4-phase2-slices-2-5-implementation-plan.md  2026-04-27-stage2-roadmap.md  2026-04-27-topology-design.md  2026-05-24-design-review-design.md  2026-05-26-design-review-plan.md  2026-06-01-operator-intervention-design-review-design.md  2026-06-01-operator-intervention-design-review-plan.md
docs/plans/stage1/: 2026-04-03-cs1-primitive-models-plan.md  2026-04-03-review-feedback-loop-roadmap.md  2026-04-13-cs7-plan1-agent-action-primitive-plan.md  2026-04-14-cs7-plan2-lifecycle-orchestration-plan.md  2026-04-17-cs7-plan3-base-image-plan.md  2026-04-17-cs7-plan4-phase1-implementation-plan.md
docs/product/: archipelago-vision.md  system-level-context.md
docs/run-reports/: 2026-04-25-run-observability-comparison.md  2026-05-12-mcp-tools-postmortem.md
docs/temp/: feature-architect-agent.md
examples/features/: fix-summary.md  mcp_tools.md  run-observability.md
lab/: bash-that-volume.sh  browse-workspace.sh  run-workspace.sh
lab/dev_test_input/: cognitive-reasoning-evals.yaml  crodino-eval.yaml  crodino-test1.yaml  crodino-web-app.yaml  dev-test-input.yaml  scratch-test.yaml
lab/job_definition/: library_api.yaml
scripts/: inspect_stream.py  run-full-pipeline.sh  run-simple-test.sh  run_design_pipeline.py  run_full_pipeline.py
src/archipelago/: __init__.py  __main__.py  archipelago_system.json  cli.py  config.py  constants.py  handlers.py  logging_config.py  models.py  models_v0.1.py  runner.py  types.py
src/archipelago/actions/: __init__.py  _workspace_ops.py  aggregate_design_verdict.py  load_review_inputs.py  log_actions.py  prepare_change_set_workspace.py  setup_python_workspace.py  workspace_bootstrap.py  workspace_io.py  workspace_ops.py  write_task_context.py
src/archipelago/agents/: __init__.py  _container.py  approval_gate.py  architecture.py  code_writer.py  decomposer.py  dispatcher.py  evaluator.py  io_models.py  models.py  software_reviewer.py  spec.py  strategy.py  unit_test_writer.py
src/archipelago/docker/: CLAUDE-software-review.md  CLAUDE-source-code-writer.md  CLAUDE-unit-test-writer.md  CLAUDE.md  Dockerfile  generate_review_schema.py  product-init.sh  run-interactive.sh
src/archipelago/docker_worker/: ansi.py  container.py  env.py  errors.py  handler.py  headless_adapter.py  interrupts.py  lifecycle.py  models.py  progress.py  protocol.py  recovery.py  session.py
src/archipelago/models/: __init__.py  change_sets_document.py  codebase_source.py  current_task_document.py  design_document.py  design_review.py  feature_definition.py  steps_document.py  tdd_plan.py
src/archipelago/roles/: architecture_generate_feature_arch.yaml  code_implement_from_tests.yaml  coding_implement_feature_from_spec.yaml  decompose_job_definition.yaml  decompose_job_specification.yaml  dev_implement_feature_tdd.yaml  dispatch_commit.yaml  dispatch_findings.yaml  evaluate_commit.yaml  integrate_findings.yaml  plan_implementation_task.yaml  review_change_set.yaml  software_review.yaml  spec_generate_feature_spec.yaml  strategy_generate_product_brief.yaml  write_unit_tests_from_spec.yaml
src/archipelago/systems/: __init__.py  _artifacts.py  _container_extras.py  _git_config.py  _lessons_learned.py  _proxy_config.py  _workspace.py  (+2 more)
team/: README.md
temp/: designer-agent-notes.md
temp/agents/: software_reviewer.py.save
tests/: review-loop-test-scenarios.txt
tests/archipelago/: conftest.py
(+127 files in other folders)
