[project]
name = "archipelago"
version = "0.1.0"
description = "An agentic system for autonomous software engineering"
authors = [
    {name = "Mark Norman", email = "mark@marknorman.com"},
]
dependencies = [
    "agent-foundry @ file:///${PROJECT_ROOT}/../agent-foundry",
    "structlog>=25.5.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "jsonschema>=4.26.0",
    "docker>=7.1.0",
    "pexpect>=4.9.0",
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-m 'not benchmark' -n 8"
asyncio_mode = "strict"
markers = [
    "benchmark: performance benchmark tests (excluded from normal runs)",
    "integration: integration tests (require Docker, external services)",
    "timeout: mark a test with a maximum runtime in seconds (requires pytest-timeout)",
]




[tool.pdm]
distribution = false

[tool.pdm.scripts]
post_install.cmd = "pre-commit install"
test-unit.cmd = "pytest tests/ -m 'not integration and not benchmark'"
test-unit.env = {PYTHONPATH = "src"}
test-integration.cmd = "pytest tests/ -m 'integration'"
test-integration.env = {PYTHONPATH = "src"}
test-all.cmd = "pytest tests/ -m 'not benchmark'"
test-all.env = {PYTHONPATH = "src"}
lint.cmd = "ruff check src/ tests/"
lint.env = {PYTHONPATH = "src"}
format.cmd = "ruff format src/ tests/"
format.env = {PYTHONPATH = "src"}
typecheck.cmd = "pyright"
typecheck.env = {PYTHONPATH = "src"}

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff==0.14.14",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.3",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
include = ["src"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
