[project]
name = "archipelago"
version = "0.1.0"
description = "An agentic system for autonomous software engineering"
authors = [
    {name = "Mark Norman", email = "mark@marknorman.com"},
]
dependencies = [
    "agent-foundry-ai>=0.12.0",
    "structlog>=25.5.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "docker>=7.1.0",
    "mlflow>=3.11.1",
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "Apache-2.0"}


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-m 'not benchmark and not e2e' -n 8"
asyncio_mode = "strict"
markers = [
    "benchmark: performance benchmark tests (excluded from normal runs)",
    "integration: integration tests (require Docker, external services)",
    "e2e: end-to-end tests that hit real LLMs; minutes per run; explicit invocation only via `pdm test-e2e`",
    "timeout: mark a test with a maximum runtime in seconds (requires pytest-timeout)",
]




[tool.pdm]
distribution = false

[tool.pdm.scripts]
post_install.cmd = "pre-commit install"
test-unit.cmd = "pytest {args:tests/} -m 'not integration and not benchmark and not e2e'"
test-unit.env = {PYTHONPATH = "src"}
test-integration.cmd = "pytest {args:tests/} -m 'integration and not e2e'"
test-integration.env = {PYTHONPATH = "src"}
test-all.cmd = "pytest tests/ -m 'not benchmark and not e2e'"
test-all.env = {PYTHONPATH = "src"}
test-e2e.cmd = "pytest {args:tests/} -m 'e2e'"
test-e2e.env = {PYTHONPATH = "src"}
lint.cmd = "ruff check src/ tests/ scripts/"
lint.env = {PYTHONPATH = "src"}
format.cmd = "ruff format src/ tests/ scripts/"
format.env = {PYTHONPATH = "src"}
typecheck.cmd = "pyright"
typecheck.env = {PYTHONPATH = "src"}

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff==0.14.14",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.3",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "TID",  # flake8-tidy-imports
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

# Guard against reaching into agent-foundry's Internal-tier deep modules when a
# public package facade re-exports the same symbols. See agent-foundry's
# docs/reference/public-api.md ("Avoid deep imports when a package export exists").
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"agent_foundry.constructs.models".msg = "Import from the agent_foundry.constructs facade."
"agent_foundry.constructs.ai_call".msg = "Import from the agent_foundry.constructs facade."
"agent_foundry.ai_models.model".msg = "Import from the agent_foundry.ai_models facade."
"agent_foundry.ai_models.inference".msg = "Import from the agent_foundry.ai_models facade."
"agent_foundry.models.markers".msg = "Import from the agent_foundry.models facade."
"agent_foundry.agents.lifecycle".msg = "Import from the agent_foundry.agents facade."
"agent_foundry.compiler.compiler".msg = "Import from the agent_foundry.compiler facade."
"agent_foundry.orchestration.container_executor".msg = "Import from the agent_foundry.orchestration facade."
"agent_foundry.orchestration.run_context".msg = "Import from the agent_foundry.orchestration facade."
"agent_foundry.orchestration.run_outcome".msg = "Import from the agent_foundry.orchestration facade."
"agent_foundry.responders.protocol".msg = "Import from the agent_foundry.responders facade."
"agent_foundry.responders.stdin".msg = "Import from the agent_foundry.responders facade."

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
include = ["src", "scripts"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
